--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/utility/_positioning.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/utility/_positioning.scss
@@ -50,14 +50,14 @@ $dp-position-directions: (
 );
 
 $dp-position-values: (
-    '-0': 0,
-    '-0_25': $inuit-base-spacing-unit--tiny,
-    '-auto': auto
+    '0': 0,
+    '0_25': $inuit-base-spacing-unit--tiny,
+    'auto': auto
 );
 
 @each $direction in $dp-position-directions {
     @each $value-short, $value in $dp-position-values {
-        .u-#{$direction}#{$value-short} {
+        .u-#{$direction}-#{$value-short} {
             #{$direction}: $value !important;
         }
     }
