--- a/templates/bundles/DemosPlanAssessmentTableBundle/DemosPlan/shared/v1/assessment_statement.html.twig
+++ b/templates/bundles/DemosPlanAssessmentTableBundle/DemosPlan/shared/v1/assessment_statement.html.twig
@@ -237,7 +237,8 @@
                 {% endif %}
 
                 {% if not readonly %}
-                    <div class="text--right space-inline-s">
+                <div class="position--sticky u-bottom-0">
+                    <div class="text--right space-inline-s u-pv-0_5 bg-color--white">
                         <input
                             class="btn btn--primary u-pr-0_5-desk-down u-pl-0_5-desk-down"
                             name="submit_item_button"
@@ -258,6 +259,7 @@
                             {{ 'abort'|trans }}
                         </a>
                     </div>
+                </div>
                 {% endif %}
             </form>
         </detail-view>
