--- a/templates/bundles/DemosPlanCoreBundle/DemosPlanFaq/faq_admin_new.html.twig
+++ b/templates/bundles/DemosPlanCoreBundle/DemosPlanFaq/faq_admin_new.html.twig
@@ -111,7 +111,7 @@
                         linkButton: true,
                         ref: 'r_text'
                     },
-                    type: 'tiptap',
+                    type: 'editor',
                     id: 'r_text',
                     required: true
                 }
