--- a/templates/bundles/DemosPlanDocumentBundle/DemosPlanDocument/paragraph_admin_edit.html.twig
+++ b/templates/bundles/DemosPlanDocumentBundle/DemosPlanDocument/paragraph_admin_edit.html.twig
@@ -67,7 +67,7 @@
         <label class="u-mb-0" for="r_text">
             {{ "paragraph.text"|trans }}*
         </label>
-        <dp-tiptap
+        <dp-editor
             value="{{ document.text }}"
             class="u-mb"
             hidden-input="r_text"
@@ -80,7 +80,7 @@
             }"
             procedure-id="{{ procedure }}"
             :required="true">
-        </dp-tiptap>
+        </dp-editor>
 
         <div class="text--right space-inline-s">
             <input
