--- a/templates/bundles/DemosPlanForumBundle/DemosPlanForum/development_release_story_threadentry_new.html.twig
+++ b/templates/bundles/DemosPlanForumBundle/DemosPlanForum/development_release_story_threadentry_new.html.twig
@@ -17,7 +17,7 @@
                         {
                             label: { text: 'thread.your'|trans },
                             control: { value: '' },
-                            type: 'tiptap',
+                            type: 'editor',
                             id: 'r_text',
                             hiddenInput: 'r_text'
                         }
