--- a/templates/bundles/DemosPlanNewsBundle/DemosPlanNews/news_admin_edit.html.twig
+++ b/templates/bundles/DemosPlanNewsBundle/DemosPlanNews/news_admin_edit.html.twig
@@ -230,7 +230,7 @@
                         ref: 'r_description'
                     },
                     id: 'r_description',
-                    type: 'tiptap',
+                    type: 'editor',
                     required: true
                 },
             ]
@@ -250,7 +250,7 @@
                         boilerPlate: 'news.notes'
                     },
                     id: 'r_text',
-                    type: 'tiptap'
+                    type: 'editor'
                 }
             ]
         }) }}
