--- a/templates/bundles/DemosPlanNewsBundle/DemosPlanNews/news_admin_new.html.twig
+++ b/templates/bundles/DemosPlanNewsBundle/DemosPlanNews/news_admin_new.html.twig
@@ -187,7 +187,7 @@
                         dataCy: 'newNewsTeaser'
                     },
                     id: 'r_description',
-                    type: 'tiptap',
+                    type: 'editor',
                     required: true
                 },
             ]
@@ -207,7 +207,7 @@
                         boilerPlate: 'news.notes'
                     },
                     id: 'r_text',
-                    type: 'tiptap'
+                    type: 'editor'
                 }
             ]
         }) }}
