--- a/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_edit_boilerplate.html.twig
+++ b/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_edit_boilerplate.html.twig
@@ -89,8 +89,8 @@
                     {{ "text"|trans }}*
                 </label><!--
          --><div class="layout__item u-3-of-4 u-pl-0">
-                    {{ uiComponent('form.tiptap', {
-                        type: 'tiptap',
+                    {{ uiComponent('form.editor', {
+                        type: 'editor',
                         id: 'r_text',
                         value: form.vars.value.text,
                         hiddenInput: 'r_text',
