--- a/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_member_email.html.twig
+++ b/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_member_email.html.twig
@@ -123,7 +123,7 @@
                         procedureId: procedureId,
                         ref: 'r_emailText'
                     },
-                    type: 'tiptap',
+                    type: 'editor',
                     id: 'r_emailText',
                     required: true
                 }
