--- a/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_send_email.html.twig
+++ b/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_send_email.html.twig
@@ -50,7 +50,7 @@
                         procedureId: templateVars.procedureId
                     },
                     id: 'r_email_body',
-                    type: 'tiptap',
+                    type: 'editor',
                     required: true,
                     value: templateVars.preparationMail.mailBody
                 }
