--- a/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_survey_form.html.twig
+++ b/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_survey_form.html.twig
@@ -52,7 +52,7 @@
                     label: { text: 'description'|trans },
                     control: { name: 'description', value: survey.description },
                     id: 'description',
-                    type: 'tiptap',
+                    type: 'editor',
                     hiddenInput: 'description',
                     required: true
                 }
