--- a/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/public_procedure_proposal.html.twig
+++ b/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/public_procedure_proposal.html.twig
@@ -49,7 +49,7 @@
                             {
                                 label: { text: 'explanation'|trans },
                                 control: { value: '' },
-                                type: 'tiptap',
+                                type: 'editor',
                                 id: 'explanation',
                                 hiddenInput: 'r_additionalExplanation'
                             }
