--- a/templates/bundles/DemosPlanStatementBundle/DemosPlanStatement/edit_tag.html.twig
+++ b/templates/bundles/DemosPlanStatementBundle/DemosPlanStatement/edit_tag.html.twig
@@ -97,7 +97,7 @@
                             required: true
                         },
                         id: 'r_boilerplateText',
-                        type: 'tiptap',
+                        type: 'editor',
                         value: ''
                     }) }}
                 </div>
