--- a/templates/bundles/DemosPlanForumBundle/DemosPlanForum/development_release_new.html.twig
+++ b/templates/bundles/DemosPlanForumBundle/DemosPlanForum/development_release_new.html.twig
@@ -18,11 +18,11 @@
                 <label class="u-mb-0" for="r_description">
                     {{ "description"|trans }}
                 </label>
-                <dp-tiptap
+                <dp-editor
                     value="{{ templateVars.request.r_text|default() }}"
                     hidden-input="r_description"
                     class="u-mb">
-                </dp-tiptap>
+                </dp-editor>
 
                 <label>
                     {{ "phase"|trans }}*
