--- a/templates/bundles/DemosPlanUserBundle/DemosPlanUser/orga_data_entry.html.twig
+++ b/templates/bundles/DemosPlanUserBundle/DemosPlanUser/orga_data_entry.html.twig
@@ -325,7 +325,7 @@
                 label: { text: 'data.protection.notes'|trans, hint: 'customer.data.protection.explanation'|trans },
                 control: { hiddenInput: organisation.ident|default ~ ':data_protection', headings: [3,4] },
                 id: 'orga_data_protection',
-                type: 'tiptap',
+                type: 'editor',
                 value: organisation.dataProtection|default,
             }] }) }}
         {% endif %}
@@ -335,7 +335,7 @@
                 label: { text: 'imprint'|trans, hint: 'organisation.imprint.hint'|trans },
                 control: { name: 'data_protection', hiddenInput: organisation.ident|default ~ ':imprint', headings: [3,4] },
                 id: 'orga_imprint',
-                type: 'tiptap',
+                type: 'editor',
                 value: organisation.imprint|default,
             }] }) }}
         {% endif %}
