chore(refs T28813): add license notice to modified Font Awesome file

--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/_settings.font-awesome.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/_settings.font-awesome.scss
@@ -1,6 +1,9 @@
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 //  (c) 2010-present DEMOS E-Partizipation GmbH.
 //
+//  This file is taken from Font Awesome and
+//  customized for demosplan.
+//
 //  This file is part of the package demosplan,
 //  for more information see the license file.
 //
