chore(refs T28813): import normalize.css from module
To be able to handle license notice of normalize.css alongside
other modules, it has to be imported as well.

--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/core_style.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/core_style.scss
@@ -62,7 +62,7 @@
 
 // Generic
 @import 'inuit-5/generic.box-sizing';
-@import 'inuit-5/generic.normalize';
+@import '~normalize.css/normalize.css';
 @import 'inuit-5/generic.reset';
 @import 'inuit-5/generic.shared';
 
