feat: pick changes from former release

--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/objects/_accordion.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/objects/_accordion.scss
@@ -24,23 +24,14 @@
         opacity: 0;
     }
 
-    &--button {
-        width: 2.5%;
-
-        & i {
-            font-size: 1.8rem;
-            line-height: 1.2rem;
-        }
+    &--button i {
+        font-size: 1.8rem;
+        line-height: 1.2rem;
     }
 
     &--checkbox {
         cursor: pointer;
         width: 2.5%;
-    }
-
-    &--header-content {
-        cursor: pointer;
-        width: 96%;
     }
 
     &--title {
