fix(refs T29296): add logout functionality
It seems like the logout was never implemented before.
As the logout button is positioned inside the form,
the post request to the logout route must be implemented
via javascript.

--- a/templates/bundles/DemosPlanUserBundle/DemosPlanUser/gateway_newUser.html.twig
+++ b/templates/bundles/DemosPlanUserBundle/DemosPlanUser/gateway_newUser.html.twig
@@ -191,7 +191,7 @@
 
                     <div class="text--right space-inline-s">
                         <input class="btn btn--primary" type="submit" value="{{ "continue"|trans }}">
-                        <button class="btn btn--secondary" type="submit" data-skip-validation>
+                        <button class="btn btn--secondary" type="button" data-skip-validation data-post-logout>
                             <i class="fa fa-sign-out" aria-hidden="true"></i>
                             {{ "logout"|trans }}
                         </button>
