--- a/templates/bundles/DemosPlanUserBundle/DemosPlanUser/gateway_newUser.html.twig
+++ b/templates/bundles/DemosPlanUserBundle/DemosPlanUser/gateway_newUser.html.twig
@@ -191,7 +191,7 @@
 
                     <div class="text--right space-inline-s">
                         <input class="btn btn--primary" type="submit" value="{{ "continue"|trans }}">
-                        <button class="btn btn--secondary" type="button" data-skip-validation data-post-logout>
+                        <button class="btn btn--secondary" type="submit" data-skip-validation>
                             <i class="fa fa-sign-out" aria-hidden="true"></i>
                             {{ "logout"|trans }}
                         </button>
