fix(refs T29296): implement logout
it seems it was not implemented before.

--- a/templates/bundles/DemosPlanUserBundle/DemosPlanUser/gateway_newUser.html.twig
+++ b/templates/bundles/DemosPlanUserBundle/DemosPlanUser/gateway_newUser.html.twig
@@ -191,10 +191,12 @@
 
                     <div class="text--right space-inline-s">
                         <input class="btn btn--primary" type="submit" value="{{ "continue"|trans }}">
-                        <button class="btn btn--secondary" type="submit" data-skip-validation>
+                        <a
+                            class="btn btn--secondary"
+                            href="{{ path('DemosPlan_user_logout') }}">
                             <i class="fa fa-sign-out" aria-hidden="true"></i>
                             {{ "logout"|trans }}
-                        </button>
+                        </a>
                     </div>
 
                 </form>
