--- a/templates/bundles/DemosPlanDocumentBundle/DemosPlanDocument/includes/single_document_file_upload.html.twig
+++ b/templates/bundles/DemosPlanDocumentBundle/DemosPlanDocument/includes/single_document_file_upload.html.twig
@@ -2,8 +2,10 @@
     <dp-upload-files
         id="r_document"
         allowed-file-types="pdf-zip-video"
-        hint="{{ 'file.upload.pdf.zip.mp4'|trans }}"
-        label="{{ 'file'|trans }}"
+        :label="{
+          hint: Translator.trans('file.upload.pdf.zip.mp4'),
+          text: Translator.trans('file')
+        }"
         :max-file-size="2 * 1024 * 1024 * 1024/* 2 GiB */"
         :max-number-of-files="1"
         name="r_document"
@@ -15,8 +17,10 @@
     <dp-upload-files
         id="r_document"
         allowed-file-types="pdf-video"
-        hint="{{ 'file.upload.pdf.mp4'|trans }}"
-        label="{{ 'file'|trans }}"
+        :label="{
+          hint: Translator.trans('file.upload.pdf.mp4'),
+          text: Translator.trans('file')
+        }"
         :max-file-size="2 * 1024 * 1024 * 1024/* 2 GiB */"
         :max-number-of-files="1"
         name="r_document"
