--- a/templates/bundles/DemosPlanCoreBundle/DemosPlanCore/includes/base_header_userbox.html.twig
+++ b/templates/bundles/DemosPlanCoreBundle/DemosPlanCore/includes/base_header_userbox.html.twig
@@ -205,18 +205,13 @@
 
                 {# logout button #}
                 {% block logoutbtn %}
-                    <form action="{{ path("DemosPlan_user_logout") }}" method="POST">
-                        <button
-                            class="c-flyout__item c-flyout__item--btn cf {{ hasOrgaSwitcher ? '' : ' u-mt-0_5' }}"
-                            type="submit"
-
-                            data-actionmenu-menuitem>
-                            <i class="fa fa-sign-out float--left u-mt-0_125" aria-hidden="true"></i>
-                            <span class="display--block u-ml" data-extern-dataport="logout">
-                                {{ "logout"|trans }}
-                            </span>
-                        </button>
-                    </form>
+                    <a
+                        class="c-flyout__item c-flyout__item--btn cf {{ hasOrgaSwitcher ? '' : ' u-mt-0_5' }}"
+                        data-actionmenu-menuitem
+                        href="{{ path("DemosPlan_user_logout") }}">
+                        <i class="fa fa-sign-out" aria-hidden="true"></i>
+                        {{ "logout"|trans }}
+                    </a>
                 {% endblock %}
 
             </span>
