fix(refs T29425): cleanup global bg color vars
Before, there were multiple variables defined which all mapped
the same light-3 neutral (and some, that were not used anymore).
These are all mapped to $dp-token-color-ui-bg-neutral-medium now.

$box-bg-color (which is only used within some legacy components)
is removed, the mapped var is used directly.

$dt-bg-color + $table-headrow-bg-color were not used anymore -> removed.

Originally, $dp-bg-color sets the bg color of the whole app. It has since
spread onto places that do not need this mapping. $dp-color-white is used
in those places now.

--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/_settings-color-assignment.dplan.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/_settings-color-assignment.dplan.scss
@@ -24,13 +24,8 @@
 $default-link-color:                    $dp-color-main !default;
 $default-link-color-hover:              $dp-color-highlight !default;
 
-// Globals > backgrounds
-// These are brand tokens and should be migrated there.
-$dp-bg-color:                           $dp-color-white !default; // bg color for readable content
-$dp-bg-color-light:                     $dp-color-neutral-light-3 !default; // bg color for light boxes, minimal contrast
-$light-bg-color:                        $dp-color-neutral-light-3 !default; // these are the same. looks like
-$medium-bg-color:                       $dp-color-neutral-light-3 !default; // one of them is lying.
-$dark-bg-color:                         $dp-color-neutral-light-2 !default;
+// Globals > background
+$dp-bg-color:                           $dp-color-white !default;
 
 // Globals > Borders
 $default-border-color:                  $dp-color-neutral-light-2 !default;
@@ -75,13 +70,9 @@ $dp-chart-color-active:                 $dp-color-highlight !default;
 
 
 // @TODO sort into above or move to token
-$dt-bg-color:                           $dp-color-neutral-base !default;
-$box-bg-color:                          $dp-color-white !default;
-
 $h1-color:                              $default-font-color !default;
 $h2-color:                              $default-font-color !default;
 $h3-color:                              $default-font-color !default;
 
 $table-row-bg-color:                    $dp-color-neutral-light-3 !default;
 $table-row-alternate-bg-color:          $default-border-color !default;
-$table-headrow-bg-color:                $dark-bg-color !default;
