--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_chart.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_chart.scss
@@ -74,7 +74,7 @@
 
         &.highlight-row,
         &:hover {
-            background-color: $medium-bg-color;
+            background-color: $dp-token-color-ui-bg-neutral-medium;
 
             .is-hidden {
                 opacity: 1;
