--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_image.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_image.scss
@@ -11,7 +11,7 @@
 .c-image {
     margin: 8px $inuit-base-spacing-unit 0 0;
     padding: 10px;
-    background: $light-bg-color;
+    background: $dp-token-color-ui-bg-neutral-medium;
     border: 2px solid $default-border-color;
     border-radius: 3px;
 
