--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_infolist.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_infolist.scss
@@ -18,7 +18,7 @@
 
     margin: 0;
 
-    background-color: $dp-bg-color;
+    background-color: $dp-color-white;
 
     &__item {
         padding-bottom: $inuit-base-spacing-unit--small;
