--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_map.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_map.scss
@@ -599,7 +599,7 @@ $map-layer-color-active-hover: $dp-token-color-brand-cta-dark;
                 overflow-y: auto;
                 width: 80%;
 
-                background-color: $dp-bg-color;
+                background-color: $dp-color-white;
 
                 transform: translate(-50%, -50%);
             }
