--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_progress-bar.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_progress-bar.scss
@@ -28,7 +28,7 @@
         }
 
         &.is-animated {
-            background: $dp-bg-color-light;
+            background: $dp-token-color-ui-bg-neutral-medium;
             display: flex;
         }
 
