--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_splitstatement.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_splitstatement.scss
@@ -28,7 +28,7 @@
         width: 80px;
         height: 80px;
         border-radius: 45px;
-        background: $dp-bg-color-light;
+        background: $dp-token-color-ui-bg-neutral-medium;
         margin: auto;
 
         .fa-hourglass-half {
