--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/objects/_form.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/objects/_form.scss
@@ -255,7 +255,7 @@ select.required {
 
 .disabled {
     @include unselectable;
-    border: 2px solid $box-bg-color !important;
+    border: 2px solid $dp-color-white !important;
     color: $deactivated-font-color;
 }
 
