--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/objects/_box.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/objects/_box.scss
@@ -15,8 +15,8 @@
 
 //  vars
 $box-hellip-transparent: rgb(255 255 255 / 0%);
-$box-hellip-fullcolor: $box-bg-color;
-$box-hellip-fullcolor-dark: $medium-bg-color;
+$box-hellip-fullcolor: $dp-color-white;
+$box-hellip-fullcolor-dark: $dp-token-color-ui-bg-neutral-medium;
 $box-hellip-line-height: 24px;
 $box-hellip-lines: 4;
 $box-hellip-height: $box-hellip-lines * $box-hellip-line-height;
@@ -29,11 +29,11 @@ $box-hellip-height: $box-hellip-lines * $box-hellip-line-height;
         border-top: 1px solid $default-border-color;
     }
 
-    background: $box-bg-color;
+    background: $dp-color-white;
     border-radius: $dp-box-radius;
 
     &--dark {
-        background: $medium-bg-color;
+        background: $dp-token-color-ui-bg-neutral-medium;
         border-radius: $dp-box-radius;
     }
 
@@ -75,11 +75,11 @@ $box-hellip-height: $box-hellip-lines * $box-hellip-line-height;
         text-indent: -10000px; // hide seo/accessibility contents of link
 
         &:hover {
-            background-color: $box-bg-color;
+            background-color: $dp-color-white;
             opacity: .5;
 
             .o-box--dark & {
-                background-color: $medium-bg-color;
+                background-color: $dp-token-color-ui-bg-neutral-medium;
             }
         }
     }
