--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/objects/_list.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/objects/_list.scss
@@ -116,7 +116,7 @@
 
         // Stacked items with bg color, separated by margin. This is the original "assessment table list style".
         .o-list--card > & {
-            background-color: $medium-bg-color;
+            background-color: $dp-token-color-ui-bg-neutral-medium;
             margin-bottom: $inuit-base-spacing-unit--small;
 
             &:last-child {
