--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/objects/_modal.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/objects/_modal.scss
@@ -35,7 +35,7 @@ $modal-box-shadow: 3px 3px 4px rgb(50 50 50 / 80%);
         max-height: calc(100% - #{$inuit-base-spacing-unit});
         overflow: auto;
 
-        background-color: $dp-bg-color;
+        background-color: $dp-color-white;
         box-shadow: $dp-token-box-shadow-3;
         border-radius: $dp-token-rounded-medium;
         transform: none;
