fix(refs T29602): Prevent Template from preparsing
to use a twig variable in vue, we have to prevent
the Vue component where the var is used from beeing
processed by twig. Otherwise the declaired twig-var is
handled as vue-var and the found as undefined.

--- a/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_new.html.twig
+++ b/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_new.html.twig
@@ -68,19 +68,21 @@
 
                 {% if hasPermission('feature_procedure_templates') %}
                     {% block master %}
-                        <dp-form-row>
-                            <dp-select
-                                id="blueprint"
-                                :label="{
-                                    hint: Translator.trans('procedure.template.fields', { fields: procedureTemplateFields }),
-                                    text: Translator.trans('master')
-                                }"
-                                name="r_copymaster"
-                                :options="blueprintOptions"
-                                :selected="masterBlueprintId"
-                                @select="setBlueprintData">
-                            </dp-select>
-                        </dp-form-row>
+                        {% verbatim %}
+                            <dp-form-row>
+                                <dp-select
+                                    id="blueprint"
+                                    :label="{
+                                        hint: Translator.trans('procedure.template.fields', { fields: '{% endverbatim %}{{ procedureTemplateFields }}{% verbatim %}' }),
+                                        text: Translator.trans('master')
+                                    }"
+                                    name="r_copymaster"
+                                    :options="blueprintOptions"
+                                    :selected="masterBlueprintId"
+                                    @select="setBlueprintData">
+                                </dp-select>
+                            </dp-form-row>
+                        {% endverbatim %}
                     {% endblock %}
                 {% endif %}
 
