feat(refs T29597): Add ol map to statement
Add basic map to new statement, statement list and statement detail.
It opens in a slidebar in list and detail view.

--- a/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_import.html.twig
+++ b/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_import.html.twig
@@ -31,5 +31,5 @@
 
 {% block javascripts %}
     {{ parent() }}
-    {{ webpackBundles(['procedure-administrationImport.js']) }}
+    {{ webpackBundles(['ol.js', 'procedure-administrationImport.js']) }}
 {% endblock javascripts %}
