feat(refs T29425): add fonts from design system

--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/_settings-fonts.dplan.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/_settings-fonts.dplan.scss
@@ -76,5 +76,8 @@ $h1-font-weight:            $normal-font-weight !default;
 $h2-font-family:            $normal-font-family !default;
 $h2-font-weight:            $normal-font-weight !default;
 
+$h3-font-family:            $normal-font-family !default;
+$h3-font-weight:            $normal-font-weight !default;
+
 $bold-font-family:          $base-font-family !default;
 $bold-font-weight:          600 !default;
