--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/_base.dplan.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/_base.dplan.scss
@@ -121,6 +121,8 @@ h2 {
 h3 {
     @include inuit-font-size($dp-token-font-size-h3, 1.4);
 
+    font-family: $h3-font-family;
+    font-weight: $h3-font-weight;
     color: $h3-color;
 }
 
