Feat(T29399): Add Twig, js, vue for `Institutionen verschlagworten` Fill them and make functions for create, edit, delete tags Show the DpDataTable of the tags
The `InstitutionTagList.vue` is necessary for a DpDataTable to manage the tags, which will get managed from the orga admin.
In the sidemenu should be a link to get to the view of this table and the orga admin is able to create, update and delete tags.

--- a/templates/bundles/DemosPlanUserBundle/DemosPlanUser/institution_tag_management.html.twig
+++ b/templates/bundles/DemosPlanUserBundle/DemosPlanUser/institution_tag_management.html.twig
@@ -2,13 +2,17 @@
 
 {% block component_part %}
     {% include '@DemosPlanProcedure/DemosPlanProcedure/includes/administration_list_pageheader.html.twig' with {
-        heading: 'procedures.administrate'|trans,
+        heading: 'institution.tag.administrate'|trans,
         highlighted: 'admin_procedures'
     } %}
+
+    <institution-tag-list>
+
+    </institution-tag-list>
 
 {% endblock component_part %}
 
 {% block javascripts %}
     {{ parent() }}
-    {{ webpackBundles(['procedure-administrationList.js']) }}
+    {{ webpackBundles(['procedure-institutionTagList.js']) }}
 {% endblock javascripts %}
